[package]
name = "mctp-dev"
description = "MCTP device emulation as a standalone process"
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
repository = "https://github.com/CodeConstruct/mctp-dev"
categories = ["network-programming", "hardware-support"]

[features]
nvme-mi = ["dep:nvme-mi-dev"]

[dependencies]
anyhow = "1.0.86"
argh = "0.1.12"
async-channel = "2.3.1"
async-io = "2.3.4"
async-net = "2.0.0"
critical-section = { version = "1.2.0", features = ["std"] }
embedded-io-adapters = { version = "0.6", features = [ "futures-03" ] }
embedded-io-async = { version = "0.6" }
futures = "0.3.31"
futures-io = "0.3.30"
log = "0.4.22"
mctp = "0.2.0"
mctp-estack = "0.1.0"
nvme-mi-dev = { git = "https://github.com/CodeConstruct/nvme-mi-dev", rev = "822803a6cc4b9481c5fb389c6658a7db7e803eb8", optional = true }
polling = "3.7.4"
simplelog = "0.12.2"
smol = "2.0.0"
usbredirparser = { git = "https://github.com/CodeConstruct/usbredir-rs", branch = "main", package = "usbredirparser" }
uuid = { version = "1.16.0", features = ["v4"] }
